# bayan

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
sources/: bayan.cpp  files_basket.hpp  filters.hpp  hash.hpp  options.hpp  scanner.hpp
tests/: bayan_gtest.cpp  bayan_tests.cpp
tests/data/files4comparison/: file_1.txt  file_4.txt  file_5.txt
